--- a/copycat/package.json
+++ b/copycat/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.22",
+    "@heroicons/react": "^2.1.3",
+    "@heroicons/vue": "^2.1.3",
+    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "postcss": "^8",
